Select columns by name or by string contained -or not- in names. Arrange descendingly and ascendingly by one ore more columns

--- a/parmesan/inputs.yaml
+++ b/parmesan/inputs.yaml
@@ -1,3 +1,13 @@
+filter_select:
+  show: true
+  input_type: selectizeInput
+  input_params:
+    label: filter_select
+    choices:
+      - Liberation Sans Narrow
+      - Sawasdee
+      - Segoe UI
+    selected: Liberation Sans Narrow
 font_family:
   show: true
   input_type: selectizeInput
